--- a/html/about.html
+++ b/html/about.html
@@ -51,7 +51,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
    <script type="importmap">
     {
       "imports": {
@@ -89,6 +91,7 @@
 <img id="kiwi" src="../media/images/kiwi.png" alt="kiwi">
 <img id="strawberry" src="../media/images/strawberry.png" alt="kiwi">
 <img id="orange" src="../media/images/orange.png" alt="kiwi">
+<img id="lemon" src="../media/images/lemon.png" alt="kiwi">
 <div id="square1"></div>
 <div id="square2"></div>
 <div id="square3"></div>
@@ -229,20 +232,19 @@
 
 
   <div class="scrollbox">
-
+<h1>About Us</h1>
     <div class="container">
       <div class="image">
-        <img src="https://i.pinimg.com/564x/59/32/29/593229739184504afd9507cc42a9cb86.jpg">
+        <img src="../media/images/desktop.jpg">
       </div>
       <div class="text">
-       <h1>ABOUT US</h1>
-        <p>Welcome to the Graphic Design Forum Blog, a vibrant hub for designers, creatives, and enthusiasts to explore, learn, and connect! Here, we celebrate the artistry, innovation, and impact of graphic design across industries and mediums.
+        Welcome to the Graphic Design Forum Blog, a vibrant hub for designers, creatives, and enthusiasts to explore, learn, and connect! Here, we celebrate the artistry, innovation, and impact of graphic design across industries and mediums.
 
           Our blog is dedicated to providing valuable insights, inspiring stories, and practical resources for designers at every level. From industry trends and design tips to deep dives into creative techniques, we aim to spark your imagination and elevate your craft.
           
           Whether you’re a seasoned professional, a curious beginner, or someone who simply appreciates the beauty of design, you’ll find a community here that shares your passion. Join us as we explore the limitless possibilities of graphic design and celebrate the creativity that shapes our world.
           
-          Let’s design, discuss, and discover together!</p>
+          Let’s design, discuss, and discover together!
       </div>
     </div>
  
