--- a/html/about.html
+++ b/html/about.html
@@ -67,7 +67,7 @@
 <body>
   <style>
     body {
-      background-color: lightpink;
+      /* background-color: lightpink; */
       background-image: url('../media/images/about-bg.png');
     }
     </style> 
@@ -232,12 +232,14 @@
 
 
   <div class="scrollbox">
-<h1>About Us</h1>
+
     <div class="container">
-      <div class="image">
+      <!-- <div class="image">
         <img src="../media/images/desktop.jpg">
-      </div>
+      </div> -->
+      <h1>About Us</h1>
       <div class="text">
+       
         Welcome to the Graphic Design Forum Blog, a vibrant hub for designers, creatives, and enthusiasts to explore, learn, and connect! Here, we celebrate the artistry, innovation, and impact of graphic design across industries and mediums.
 
           Our blog is dedicated to providing valuable insights, inspiring stories, and practical resources for designers at every level. From industry trends and design tips to deep dives into creative techniques, we aim to spark your imagination and elevate your craft.
