--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
   <style>
     body {
-      background-image: url('media/images/blue-paper.png');
+      background-image: url('media/images/color-fill.png');
     }
     </style>
 
