--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pinyon+Script&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Jacquarda+Bastarda+9&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pinyon+Script&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
    <script type="importmap">
     {
       "imports": {
@@ -72,7 +78,7 @@
 <body>
   <style>
     body {
-      background-image: url('media/images/color-fill.png');
+      background-color: #0638BB;
     }
     </style>
 
@@ -97,8 +103,12 @@
   </div> 
    
   <div class ="flex-container2">
-    <p>fill with placeholder text continue sijubfkjflfkeln</p>
-    <h1>Visual Design Forum</h1>
+    <p>In a world inundated with information, capturing and retaining the attention of your audience is more challenging than ever. This is where the magic of graphic design comes into play. Visual storytelling, powered by thoughtful and strategic graphic design, is an essential tool for shaping and communicating a brand's identity. In this post, we’ll explore how graphic design influences brand perception and how you can harness its power to create a lasting impact.</p>
+    <h1>Visual</h1>
+    <h3>Design</h3>
+   <h4>Forum</h4>
+   
+
 <h2><i>designforum.com</i></h2>
 
 
@@ -109,7 +119,7 @@
   </div> -->
 
 
-<!-- <h4><i>✰hint✰</i> move the butterfly around!</h4> -->
+<h5><i>✰hint✰</i> move the butterfly around!</h5>
 <div id="three-body"></div> 
 
 
@@ -149,7 +159,7 @@ fill with placeholder text </h2>
 
 </div> -->
 
-<div class="bottom-header">
+<!-- <div class="bottom-header">
   <a href="html/archive.html" id="archive">Archive</a>
 
   <a href="html/about.html" id="about">About</a>
@@ -157,7 +167,7 @@ fill with placeholder text </h2>
   <a href="html/blog.html" id="blog">Blog</a>
 
   
-</div> 
+</div>  -->
 
 
 
