--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Jacquarda+Bastarda+9&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pinyon+Script&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Jacquarda+Bastarda+9&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pinyon+Script&family=Prata&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
    <script type="importmap">
     {
       "imports": {
@@ -78,7 +81,7 @@
 <body>
   <style>
     body {
-      background-color: #0638BB;
+      background-color: blue;
     }
     </style>
 
@@ -89,9 +92,6 @@
 
 <div class="parent-container">
 
- 
-
-  
   <div class="flex-container3">
     <a href="html/archive.html" id="archive">Archive</a>
   
@@ -99,65 +99,37 @@
   
     <a href="html/blog.html" id="blog">Blog</a>
   
-    
   </div> 
    
-  <div class ="flex-container2">
-    <p>In a world inundated with information, capturing and retaining the attention of your audience is more challenging than ever. This is where the magic of graphic design comes into play. Visual storytelling, powered by thoughtful and strategic graphic design, is an essential tool for shaping and communicating a brand's identity. In this post, we’ll explore how graphic design influences brand perception and how you can harness its power to create a lasting impact.</p>
+  <div class ="flex-container">
+    
+    <!-- <p>In a world inundated with information, capturing and retaining the attention of your audience is more challenging than ever. This is where the magic of graphic design comes into play. Visual storytelling, powered by thoughtful and strategic graphic design, is an essential tool for shaping and communicating a brand's identity. In this post, we’ll explore how graphic design influences brand perception and how you can harness its power to create a lasting impact.</p> -->
     <h1>Visual</h1>
     <h3>Design</h3>
    <h4>Forum</h4>
    
 
 <h2><i>designforum.com</i></h2>
-
-
-<!-- <div class="flex-container">
-  <div id="circle1"></div> -->
-  <!-- <div id="apple">
-    <img src="media/images/apple.png" alt="apple">
-  </div> -->
-
-
 <h5><i>✰hint✰</i> move the butterfly around!</h5>
+
 <div id="three-body"></div> 
 
 
- <!-- <div id="heart">
-  <div id="eye1"></div>
-  <div id="eye2"></div>
-  <div id="pupil1"></div>
-  <div id="pupil2"></div> -->
+
+
+
 
 
 
 
 
  </div>
-<!-- 
-<h5>Forum</h5>
-<h6>Design</h6>
-<h7>Visual</h7> -->
-
- <!-- <div id="nature3">
-  <img src="media/images/nature2.png" alt="nature2">
- </div>  -->
-
-<!-- <div class="flex-container2">
-<div id="heart"></div>
-<div class="scrollbox">
-<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...
-Check out our blog to see posts from fellow designers filled with ideas, resources, and inspiration.
-fill with placeholder text </h2>
 
 
 </div>
 
 
 
-
-
-</div> -->
 
 <!-- <div class="bottom-header">
   <a href="html/archive.html" id="archive">Archive</a>
