--- a/html/blog.html
+++ b/html/blog.html
@@ -69,7 +69,7 @@
 <body>
   <style>
     body {
-      background-color: #FF9CD2;
+      background-image: url('../media/images/hotpinkbg.png');
     }
     </style>
 
@@ -89,8 +89,8 @@
 
 
  <div class="flex-container3">
-  <a href="../index.html" id="blog">home</a>
-  <a href="../html/archive.html" id="archive">archive</a>
+  <a href="../index.html" id="blog">archive</a>
+  <!-- <a href="../html/archive.html" id="archive">archive</a> -->
 
   <a href="../html/about.html" id="about">about</a>
 
@@ -142,18 +142,21 @@
 <div class="flex-container2">
 
 
-  <div class="header1">
+  <!-- <div class="header1">
     <div class="item1">
       hey
     </div>
     <div class="item2">
       hey</div>
-  </div>
+  </div> -->
 
   <div class="header2">
     <img id="computer" src="../media/images/desktop.jpg" alt="computer">
-
-  </div>
+    <img id="computer" src="../media/images/pic2.jpg" alt="computer">
+    <img id="computer" src="../media/images/pic3.jpg" alt="computer">
+    <img id="computer" src="../media/images/pic4.jpg" alt="computer">
+    
+    </div>
   
   
   <div class="icon">
@@ -206,19 +209,21 @@
 <div class="flex-container">
   <div class="header1">
     <div class="item1">
-      hey
+      blog
     </div>
     <div class="item2">
-      hey</div>
+      blog</div>
   <div class="item3">
-    hey
+    blog
   </div>
   </div>
   
   
   
   
+
   <div class="header"> 
+    
     <div id="title">blog hub!</div>
 
 <h3>post here</h3>
